* view-method and show-method for cooccurrences-objects now successfully redirect
output to RStudio viewer
* data.table-style indexing of objects inheriting from textstat-class
* for windows compatibility, as.corpusEnc/as.nativeEnc for encoding conversion
* performance gain for size-method by using polmineR.Rcpp
* dissect-method dropped (replaced by size)
* improved documentation of size-method

v0.7.2
* updated documentation of partition-method.
* documentation of hits-method improved
* use-methode: default value for pkg ist NULL (return to default registry), function more robust
* Rework for parsing the registry
* rework of templates, are part of options now (see ?setTemplate, ?getTemplate)
* experimental use of polmineR.Rcpp-package for fast counts for whole corpus
* new convenience function install.corpus to install CWB corpus wrapped into R data package
* adjustments to make package compatible with polmineR.shiny
* cpos-method to get hits more robust if there are not matches for string
* hits-method removes NAs
* compare-method renamed to features-method
* warnings caused by startup on windows removed

v0.7.1
* size-method now allows for a param 'sAttribute'
* hits-method reworked, allows for names query vectors
* first version that can be installed on windows

v0.7.0
* rcqp package moved to suggests, to facilitate installation


v0.6.3
* more generic implementation of as.markdown-method to prepare use of templates
* LICENSE file updated
* getTokenStream,character-method: new default behavior for params left and right
* use of templates for as.markdown-method
* Regions and TokenStream class (not for frontend use, so far)
* getTermFrequencies-method merged into count-method
* Corpus class introduced
* decode- and encode-methods introduced

v0.6.2
* refactoring of context-method to prepare more consistent usage
* progress bar for context-method (using blapply)
* progress bar for partitionBundle (using blapply)