@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/context_class.R, R/count_method.R, R/view_method.R
+% Please edit documentation in R/context_class.R, R/count_method.R
 \docType{class}
 \name{context-class}
 \alias{[,context,ANY,ANY,ANY-method}
@@ -11,12 +11,9 @@
 \alias{head,context-method}
 \alias{show,context-method}
 \alias{summary,context-method}
-\alias{view,context-method}
 \title{S4 context class}
 \usage{
 \S4method{count}{context}(.Object)
-
-\S4method{view}{context}(.Object)
 }
 \arguments{
 \item{.Object}{object}
