@@ -3,7 +3,7 @@
 \docType{methods}
 \name{mail}
 \alias{mail}
-\alias{mail,context-method}
+\alias{mail,cooccurrences-method}
 \alias{mail,data.frame-method}
 \alias{mail,dispersion-method}
 \alias{mail,features-method}
@@ -17,7 +17,7 @@ mail(object, ...)
 \S4method{mail}{partition}(object, to = NULL,
   filename = "drillerExport.html", what = "html")
 
-\S4method{mail}{context}(object, to = NULL, nrow = NULL,
+\S4method{mail}{cooccurrences}(object, to = NULL, nrow = NULL,
   fileFormat = c("csv", "xlsx"))
 
 \S4method{mail}{features}(object, to = NULL, nrow = NULL,
