@@ -7,6 +7,7 @@ output to RStudio viewer
 * performance gain for size-method by using polmineR.Rcpp
 * dissect-method dropped (replaced by size)
 * improved documentation of size-method
+* labels for cooccurrences-output
 
 v0.7.2
 * updated documentation of partition-method.
